# gridlumen-ai

./: .gitignore  AGENTS.md  CURSOR_ORCHESTRATOR_PROMPT.md  CURSOR_TASKS.md  DESIGN.md  README.md
arcgis/: DEMO_RECORDING_CHECKLIST.md  POPUP_FIELDS.md  PUBLISHING_GUIDE.md
arcgis/screenshots/: README.md
docs/: ARCGIS_PRIVACY.md  DATA_DISCLOSURE.md  DECISION_LOG.md  PARALLEL_AGENT_HANDOFF.md  SECURITY_SCOPE.md  SOURCE_ATTRIBUTIONS.md
engine/: README.md  pyproject.toml
engine/data/: sources.md  zone_geometry_manifest.json
engine/data/demo/: scenarios.json  zones.geojson
engine/data/raw/: README.md  wards_mississauga.geojson
engine/gridlumen/: __init__.py  geojson_export.py  models.py  risk_engine.py  scoring.py
engine/scripts/: build_screening_zones.py
engine/tests/: test_scaffold.py  test_scoring.py  test_zone_geometry.py
hermes/: HERMES_DEMO_SCRIPT.md  SKILL.md
pitch/: FIVE_MINUTE_SCRIPT.md  RECORDING_CHECKLIST.md  SLIDE_OUTLINE.md
web/: .env.example  index.html  package-lock.json  package.json
web/docs/: P3_P2_INTEGRATION.md
web/src/: App.tsx
web/src/components/layout/: Footer.tsx  Header.tsx  HeroControls.tsx  KpiCards.tsx  ui.tsx
web/src/components/operations/: DataStatusChips.tsx  (+9 more)
web/src/data/: loadScenarios.ts  types.ts
web/src/hooks/: useScenario.ts
web/src/lib/: explainZone.ts  geoProjection.ts  riskStyles.ts  scenarioData.ts  sortZones.ts
web/src/styles/: index.css
web/src/test/: appIntegration.test.tsx  operationsWorkspace.test.tsx  riskMapGeometry.test.tsx  scaffold.test.tsx  sortZones.test.ts  useScenario.test.tsx
(+5 files in other folders)
