[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gridlumen-engine"
version = "0.1.0"
description = "Deterministic risk engine for GridLumen AI hackathon prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
geo-build = ["shapely>=2,<3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gridlumen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
